syntax = "proto3";
package ibc.lightclients.wasm.v1;

option go_package = "github.com/cosmos/ibc-go/modules/light-clients/08-wasm/types";

import "cosmos/msg/v1/msg.proto";

// Msg defines the ibc/08-wasm Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // StoreCode defines a rpc handler method for MsgStoreCode.
  rpc StoreCode(MsgStoreCode) returns (MsgStoreCodeResponse);

  // RemoveCodeHash defines a rpc handler method for MsgRemoveCodeHash.
  rpc RemoveCodeHash(MsgRemoveCodeHash) returns (MsgRemoveCodeHashResponse);
}

// MsgStoreCode defines the request type for the StoreCode rpc.
message MsgStoreCode {
  option (cosmos.msg.v1.signer) = "signer";

  string signer = 1;
  // wasm byte code of light client contract. It can be raw or gzip compressed
  bytes wasm_byte_code = 2;
}

// MsgStoreCodeResponse defines the response type for the StoreCode rpc
message MsgStoreCodeResponse {
  // the sha256 hash of the stored code
  bytes checksum = 1;
}

// MsgRemoveCodeHash defines the request type for the MsgRemoveCodeHash rpc.
message MsgRemoveCodeHash {
  option (cosmos.msg.v1.signer) = "signer";

  string signer = 1;
  // code hash to be removed from the store
  bytes code_hash = 2;
}

// MsgStoreCodeResponse defines the response type for the StoreCode rpc
message MsgRemoveCodeHashResponse {}
